--- a/bluefish/data/custom_menu.in
+++ b/bluefish/data/custom_menu.in
@@ -1,46 +1,50 @@
-/docbook/define entity:0:<!ENTITY %0 '%0'>::1:entity name:
-/sql/select all from table:0:SELECT * FROM %0::1:table name:
-/replace/strip <font>:1:(<font[^>]*>|</font>)::0:1:0:0:
-/replace/strip <any tag> in selection:1:(<%0[^>]*>|</%0>)::2:1:0:1:tag name, like td, font or a:
-/replace/convert <td> in <th> in selection:1:(<|</)(td)([^>]*)(>):\\0th\\2>:2:1:0:0:
-/php/php block:0:\n<?php\n:\n?>\n:
-/php/odbc/odbc fetch row:0:while($success = odbc_fetch_row($%0)) {\n\\t\n}::1:result variable name:
-/php/odbc/odbc exec query:0:$%0 = odbc_exec(%1, %2);\n::3:result variable name:odbc connection id name:query string (quoted) or variable (including $):
-/php/odbc/odbc connect:0:$odbc_id = odbc_connect('%0', '%1', '%2');\n::3:odbc data source name:username:password:
-/php/mysql/query:0:$%0 = mysql_query(%1, %2);\n::3:result variable name:mysql connection id name:query string (quoted) or variable (including $):
-/php/mysql/mysql fetch row:0:while ($%1 = mysql_fetch_row($%0)) {\n\\techo $%1[0];\n:\n}\nmysql_free_result($%0);\n:2:mysql result variable name:row variable name:
-/php/mysql/mysql connect:0:$mysql_id = mysql_connect('%0', '%1', '%2');\nmysql_select_db($mysql_id, '%3');\n::4:mysql host:mysql username:mysql password:database name:
-/php/ibase/query:0:$%0 = ibase_query(%2);\n:ibase_free_result($%0);\n:2:result variable name:query string (quoted) or variable (including $):
-/php/ibase/ibase fetch row:0:while ($%1 = ibase_fetch_row($%0)) {\n\\techo $%1[0];\n:\n}\nibase_free_result($%0);\n:2:ibase result variable name:row variable name:
-/php/ibase/ibase connect:0:$ibase_id = ibase_connect('%0\:%1', '%2', '%3');\n::4:ibase host:ibase database path:ibase username:ibase password:
-/php/general/while each in array list:0:while (list($key, $val) = each($%0)) {\n\\t:\n}\n:1:array name:
-/php/general/require file:0:require('%0');\n::1:filename to require:
-/php/general/mail:0:mail("%0", "%1", $%2);\n::3:email adress:subject:mail body variable name:
-/php/general/location header:0:header('Location\: '.%0);::1:location (URL) to redirect to (quoted) or variable (including $):
-/php/general/include file:0:include('%0');\n::1:filename to include:
-/php/general/if not isset:0:if (!isset($%0)) {\n\\t:\n}:1:variable name to test for:
-/php/general/if isset:0:if (isset($%0)) {\n\\t:\n}:1:variable name to test for:
-/php/general/for loop:0:for ($%0 = %1; $%0 <= %2; $%0++) {\n :\n}\n:3:loop variable name:from value:to value:
-/php/general/echo date:0:echo date("l dS of F Y h\:i\:s A");::
-/php/filesystem/open and echo file:0:$fd = fopen(%0, 'r');\nwhile (!feof($fd)) {\n\\t$buffer = fgets($fd, 4096);\n\\techo $buffer;\n}\nfclose($fd);::1:file (quoted) or variable (including $):
-/html/span with class:0:<span class="%0">:</span>:1:CSS class name:
-/html/meta refresh (client pull):0:<meta http-equiv="refresh" content="%0; URL=%1">::2:refresh time, in seconds:URL to redirect to:
-/html/meta keywords:0:<meta name="keywords" value="%0">::1:keywords, space separated:
-/html/made with bluefish:0:<a href="http\://bluefish.openoffice.nl/">Made with the Bluefish HTML editor</a>::
-/html/font symbol:0:<font face="Symbol">:</font>:
-/html/div with class:0:<div class="%0">:</div>:1:CSS class name:
-/docbook/title:0:<title>:</tile>:0:
-/docbook/programlisting:0:<programlisting>:</programlisting>:0:
-/docbook/paragraph:0:<para>:</para>:0:
-/docbook/itemizedlist:0:<itemizedlist>\n\\t  <listitem><para>:</para></listitem>\n</itemizedlist>:0:
-/apache/deny access to .inc:0:<FilesMatch "\\.inc$">\n\\tOrder allow,deny\n\\tDeny from all\n</FilesMatch>::0:
-/apache/basic password required:0:AuthName "%1"\nAuthType Basic\nrequire valid-user\nAuthUserFile %0\n::2:full path to password file:security description:
-/active html/textarea:0:<textarea name="%0" rows="20" cols="40"><?php if (isset($%0)) { echo $%0; } ?></textarea>::1:variable name:
-/active html/select options/from mysql result:0:<select name="%0">\n<?php\nwhile($row = mysql_fetch_row($%1)) {\n\\tif (isset($%0) && ($%0 == $row[%2])) {\n\\t\\techo '<option value="'.$row[%2].'" selected>'.$row[%3].'</option>';\n\\t} else {\n\\t\\techo '<option value="'.$row[%2].'">'.$row[%3].'</option>';\n\\t}\n}\n?></select>::4:variable name:mysql query result:index of the value:index of the label:
-/active html/select options/from ibase result:0:<select name="%0">\n<?php\nwhile($row = ibase_fetch_row($%1)) {\n\\tif (isset($%0) && ($%0 == $row[%2])) {\n\\t\\techo '<option value="'.$row[%2].'" selected>'.$row[%3].'</option>';\n\\t} else {\n\\t\\techo '<option value="'.$row[%2].'">'.$row[%3].'</option>';\n\\t}\n}\n?></select>::4:variable name:ibase query result:index of the value:index of the label:
-/active html/select options/from array:0:<select name="%0">\n<?php\nwhile(list($key, $val)=each($%1)) {\n\\tif (isset($%0) && ($%0 == $val)) {\n\\t\\techo '<option value="'.$key.'" selected>'.$val.'</option>';\n\\t} else {\n\\t\\techo '<option value="'.$key.'">'.$val.'</option>';\n\\t}\n}\n?></select>::2:variable name:array name containing options:
-/active html/input text:0:<input type="text" name="%0" value="<?php if (isset($%0)) { echo $%0; } ?>">::1:variable name:
-/active html/input checkbox:0:<input type="checkbox" name="%0" value="%1" <?php if (isset($%0)) { echo 'checked'; } ?>>::2:variable name:value when checked:
-/active html/form and action:0:<?php if (isset($submitted)) {\n//form submit code here\n} else { ?>\n<form method="POST" action="<?php echo $SCRIPT_NAME ?>">\n\n<input type="submit" name="submitted" value="%0"></form>\n<?php } // end of form ?>::1:Submit button text:
-/active html/form:0:<form method="POST" action="<?php echo $SCRIPT_NAME ?>">\n\n:</form>:
-/DHTML/mouseover image:0:<a href="" onMouseOver="bfmovepic('%0', '%2')" onMouseOut="bfmovepic('%0', '%1')"><img src="%1" name="%0"></a>::3:unique name:onMouseOut src:onMouseOver src:
+cmenu_insert: /C programming/define:#define %0\n:\n:1:name of #define:
+cmenu_insert: /C programming/ifdef:\n#ifdef %0\n:\n#endif /* %0 */\n:1:name of #define:
+cmenu_insert: /C programming/walk GList:GList *tmplist;\ntmplist = g_list_first(%0);\nwhile(tmplist){\n\t:\n\ttmplist = g_list_next(tmplist);\n}:1:GList name:
+cmenu_insert: /C programming/comment:/*:*/:0:
+cmenu_insert: /sql/select all from table:SELECT * FROM %0::1:table name:
+cmenu_insert: /php/php block:\n<?php\n:\n?>\n:0:
+cmenu_insert: /php/odbc/odbc fetch row:while($success = odbc_fetch_row($%0)) {\n\t\n}::1:result variable name:
+cmenu_insert: /php/odbc/odbc exec query:$%0 = odbc_exec(%1, %2);\n::3:result variable name:odbc connection id name:query string (quoted) or variable (including $):
+cmenu_insert: /php/odbc/odbc connect:$odbc_id = odbc_connect('%0', '%1', '%2');\n::3:odbc data source name:username:password:
+cmenu_insert: /php/mysql/query:$%0 = mysql_query(%1, %2);\n::3:result variable name:mysql connection id name:query string (quoted) or variable (including $):
+cmenu_insert: /php/mysql/mysql fetch row:while ($%1 = mysql_fetch_row($%0)) {\n\techo $%1[0];\n:\n}\nmysql_free_result($%0);\n:2:mysql result variable name:row variable name:
+cmenu_insert: /php/mysql/mysql connect:$mysql_id = mysql_connect('%0', '%1', '%2');\nmysql_select_db($mysql_id, '%3');\n::4:mysql host:mysql username:mysql password:database name:
+cmenu_insert: /php/ibase/query:$%0 = ibase_query(%2);\n:ibase_free_result($%0);\n:2:result variable name:query string (quoted) or variable (including $):
+cmenu_insert: /php/ibase/ibase fetch row:while ($%1 = ibase_fetch_row($%0)) {\n\techo $%1[0];\n:\n}\nibase_free_result($%0);\n:2:ibase result variable name:row variable name:
+cmenu_insert: /php/ibase/ibase connect:$ibase_id = ibase_connect('%0\:%1', '%2', '%3');\n::4:ibase host:ibase database path:ibase username:ibase password:
+cmenu_insert: /php/general/while each in array list:while (list($key, $val) = each($%0)) {\n\t:\n}\n:1:array name:
+cmenu_insert: /php/general/require file:require('%0');\n::1:filename to require:
+cmenu_insert: /php/general/mail:mail("%0", "%1", $%2);\n::3:email adress:subject:mail body variable name:
+cmenu_insert: /php/general/location header:header('Location\: '.%0);::1:location (URL) to redirect to (quoted) or variable (including $):
+cmenu_insert: /php/general/include file:include('%0');\n::1:filename to include:
+cmenu_insert: /php/general/if not isset:if (!isset($%0)) {\n\t:\n}:1:variable name to test for:
+cmenu_insert: /php/general/if isset:if (isset($%0)) {\n\t:\n}:1:variable name to test for:
+cmenu_insert: /php/general/for loop:for ($%0 = %1; $%0 <= %2; $%0++) {\n :\n}\n:3:loop variable name:from value:to value:
+cmenu_insert: /php/general/echo date:echo date("l dS of F Y h\:i\:s A");::0:
+cmenu_insert: /php/filesystem/open and echo file:$fd = fopen(%0, 'r');\nwhile (!feof($fd)) {\n\t$buffer = fgets($fd, 4096);\n\techo $buffer;\n}\nfclose($fd);::1:file (quoted) or variable (including $):
+cmenu_insert: /html/span with class:<span class="%0">:</span>:1:CSS class name:
+cmenu_insert: /html/meta refresh (client pull):<meta http-equiv="refresh" content="%0; URL=%1">::2:refresh time, in seconds:URL to redirect to:
+cmenu_insert: /html/meta keywords:<meta name="keywords" value="%0">::1:keywords, space separated:
+cmenu_insert: /html/made with bluefish:<a href="http\://bluefish.openoffice.nl/">Made with the Bluefish HTML editor</a>::0:
+cmenu_insert: /html/font symbol:<font face="Symbol">:</font>:0:
+cmenu_insert: /html/div with class:<div class="%0">:</div>:1:CSS class name:
+cmenu_insert: /docbook/title:<title>:</tile>:0:
+cmenu_insert: /docbook/programlisting:<programlisting>:</programlisting>:0:
+cmenu_insert: /docbook/paragraph:<para>:</para>:0:
+cmenu_insert: /docbook/itemizedlist:<itemizedlist>\n\t  <listitem><para>:</para></listitem>\n</itemizedlist>:0:
+cmenu_insert: /docbook/define entity:<!ENTITY %0 '%0'>::1:entity name:
+cmenu_insert: /apache/deny access to .inc:<FilesMatch "\\.inc$">\n\tOrder allow,deny\n\tDeny from all\n</FilesMatch>::0:
+cmenu_insert: /apache/basic password required:AuthName "%1"\nAuthType Basic\nrequire valid-user\nAuthUserFile %0\n::2:full path to password file:security description:
+cmenu_insert: /active html/textarea:<textarea name="%0" rows="20" cols="40"><?php if (isset($%0)) { echo $%0; } ?></textarea>::1:variable name:
+cmenu_insert: /active html/select options/from mysql result:<select name="%0">\n<?php\nwhile($row = mysql_fetch_row($%1)) {\n\tif (isset($%0) && ($%0 == $row[%2])) {\n\t\\techo '<option value="'.$row[%2].'" selected>'.$row[%3].'</option>';\n\t} else {\n\t\\techo '<option value="'.$row[%2].'">'.$row[%3].'</option>';\n\t}\n}\n?></select>::4:variable name:mysql query result:index of the value:index of the label:
+cmenu_insert: /active html/select options/from ibase result:<select name="%0">\n<?php\nwhile($row = ibase_fetch_row($%1)) {\n\tif (isset($%0) && ($%0 == $row[%2])) {\n\t\\techo '<option value="'.$row[%2].'" selected>'.$row[%3].'</option>';\n\t} else {\n\t\techo '<option value="'.$row[%2].'">'.$row[%3].'</option>';\n\t}\n}\n?></select>::4:variable name:ibase query result:index of the value:index of the label:
+cmenu_insert: /active html/select options/from array:<select name="%0">\n<?php\nwhile(list($key, $val)=each($%1)) {\n\tif (isset($%0) && ($%0 == $val)) {\n\t\techo '<option value="'.$key.'" selected>'.$val.'</option>';\n\t} else {\n\t\techo '<option value="'.$key.'">'.$val.'</option>';\n\t}\n}\n?></select>::2:variable name:array name containing options:
+cmenu_insert: /active html/input text:<input type="text" name="%0" value="<?php if (isset($%0)) { echo $%0; } ?>">::1:variable name:
+cmenu_insert: /active html/input checkbox:<input type="checkbox" name="%0" value="%1" <?php if (isset($%0)) { echo 'checked'; } ?>>::2:variable name:value when checked:
+cmenu_insert: /active html/form and action:<?php if (isset($submitted)) {\n//form submit code here\n} else { ?>\n<form method="POST" action="<?php echo $SCRIPT_NAME ?>">\n\n<input type="submit" name="submitted" value="%0"></form>\n<?php } // end of form ?>::1:Submit button text:
+cmenu_insert: /active html/form:<form method="POST" action="<?php echo $SCRIPT_NAME ?>">\n\n:</form>:0:
+cmenu_insert: /DHTML/mouseover image:<a href="" onMouseOver="bfmovepic('%0', '%2')" onMouseOut="bfmovepic('%0', '%1')"><img src="%1" name="%0"></a>::3:unique name:onMouseOut src:onMouseOver src:
+cmenu_replace: /replace/strip <font>:(<font[^>]*>|</font>)::0:1:0:0:
+cmenu_replace: /replace/strip <any tag> in selection:(<%0[^>]*>|</%0>)::2:1:0:1:tag name, like td, font or a:
+cmenu_replace: /replace/convert <td> in <th> in selection:(<|</)(td)([^>]*)(>):\\0th\\2>:2:1:0:0:
