--- a/Makefile.in
+++ b/Makefile.in
@@ -41,11 +41,13 @@ INSTALL_DATA = $(INSTALL) -m 644
 
 #make -C is a GNU extension, BSD make doesn't have it
 #use cd dir ; make all instead
+#and [ "bla" == "bla" ] does not work on netBSD
+#use [ "bla" = "bla" ] instead
 
 bluefish:all
 all:
 	@cd src/ && $(MAKE) all
-	if [ "${USE_NLS}" == "yes" ]; then \
+	if [ "${USE_NLS}" = "yes" ]; then \
 		cd po/ && $(MAKE) all; \
 	fi
 	@cd data/ && $(MAKE) all
@@ -77,7 +79,7 @@ install: src/bluefish
 		$(INSTALL_DATA) inline_images/bluefish_icon1.png $(iconpath)/bluefish-icon.png ;\
 	fi
 	@cd src/ && $(MAKE) install
-	if [ "${USE_NLS}" == "yes" ]; then \
+	if [ "${USE_NLS}" = "yes" ]; then \
 		cd po/ && $(MAKE) install;\
 	fi
 	@cd data/ && $(MAKE) install
