--- a/src/config.h.in
+++ b/src/config.h.in
@@ -51,6 +51,9 @@
 /* libaspell */
 #undef HAVE_LIBASPELL
 
+/* gnome-vfs-2.0 */
+#undef HAVE_GNOME_VFS
+
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
 
