--- a/data/bluefish.desktop.in
+++ b/data/bluefish.desktop.in
@@ -5,6 +5,6 @@ Exec=bluefish
 Icon=ICONDIR/bluefish-icon.png
 Terminal=false
 Type=Application
-Categories=Application;Office;
+Categories=Application;Development;
 Encoding=UTF-8
 
