--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -64,7 +64,7 @@ java:this:0:\\bthis\\.::2::#000099::2:0:
 java:primitive-types:0:\\b(void|double|boolean|int)\\b::2::#880088::2:0:
 java:braces:0:[{()}]:::2::#000000::2:0:
 java:character:0:':':1::#009900::0:0:
-python:keywords:0:\\b(and|assert|break|continue|def|del|elif|else|except|exec|finally|for|if|in|is|not|or|pass|print|raise|return|try|while)\\b::2::#000000::2:0:
+python:keywords:0:\\b(and|assert|break|continue|class|def|del|elif|else|except|exec|finally|for|if|in|is|not|or|pass|print|raise|return|try|while)\\b::2::#000000::2:0:
 python:string-double:0:":":1::#009900::0:0:
 python:string-double-escape:0:\\\\.::2:^string-double$:#009900::0:0:
 python:string-single:0:':':1::#009900::0:0:
