--- a/data/filetypes.in
+++ b/data/filetypes.in
@@ -7,6 +7,7 @@ java:.java:(){}'[]\n" :PKGDATADIRicon_java.png:1::
 perl:.pl\:.PL\:.cgi:::1:^#!/[a-z/]+perl:
 objectfile:.o\:.class:::0::
 stylesheet:.css:::1::
+javascript:.js:::1::
 webimage:.jpg\:.png\:.gif\:.jpeg::PKGDATADIRicon_image.png:1::
 image:.jpg\:.png\:.gif\:.jpeg\:.tif\:.tiff\:.xpm\:.xcf::PKGDATADIRicon_image.png:1::
 sql:.sql:(){}'[]\n" ::1::
