--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -131,5 +131,21 @@ stylesheet:Misc:1:(\\s*|\\t*)\\b(float|color|width|height|position|top|bottom|le
 stylesheet:Font:1:\\b(font(\\-color|\\-family|\\-weight|\\-size|\\-variant|\\-style)*)\\b::2::darkblue::2:0:
 stylesheet:Selector:1:\\b(a\\\:link|a\\\:visited|a\\\:active|a\\\:hover|body|abbr|acronym|address|applet|area|b|bdo|blockquote|br|button|caption|cite|code|col|colgroup|dd|del|dfn|div|dl|dt|em|embed|fieldset|form|h\\d+|hr|i|iframe|img|input|ins|kbd|label|legend|li|map|noframes|noscript|object|ol|optgroup|option|p|pre|q|samp|select|small|span|strong|table|tbody|td|textarea|tfoot|th|thead|tr|tt|ul|var)\\b::2::#772020::0:0:
 stylesheet:Value:1:\\b(relative|serif|sans\\-serif|cursive|fantasy|monospace|normal|italic|oblique|small\\-caps|bold|bolder|lighter|smaller|xx\\-small|x\\-small|small|medium|large|x\\-large|xx\\-large|transparent|none|repeat|repeat\\-x|repeat\\-y|no\\-repeat|scroll|fixed|top|center|bottom|left|center|right|underline|overline|line\\-through|blink|baseline|sub|super|text\\-top|middle|text\\-bottom|capitalize|uppercase|lowercase|justify|auto|thin|thick|dotted|dashed|solid|double|groove|ridge|inset|outset|both|block|inline|list\\-item|pre|nowrap|disc|circle|square|decimal|lower\\-roman|upper\\-roman|lower\\-alpha|upper\\-alpha|inside|outside)\\b::2::::2:0:
-
+javascript:object:1:([a-z]+)\\.::2::navy::0:2:
+javascript:function_identyfier:1:([a-z0-9]+)\\(::2::::2:2:
+javascript:number:1:[0-9]::2::#1B591C::2:0:
+javascript:array:1:([a-z0-9]+)\\[:\\]:1::navy::2:0:
+javascript:new:1:\\b(new)\\b::2::#DF2020::2:2:
+javascript:character:0:':':1::#009900::0:0:
+javascript:braces:1:[{()}]::2::::2:2:
+javascript:primitive-types:0:\\b(var)\\b::2::#DC8126::2:0:
+javascript:this:1:\\bthis::2::#BE3030::2:0:
+javascript:special_values:0:\\b(false|null|true)\\b::2::#AB3333::2:0:
+javascript:keywords:0:\\b(return|goto|if|else|case|default|switch|break|continue|while|do|for|catch|throw|finally|try)\\b::2::#29429B::2:0:
+javascript:string-escape:0:\\\\.::2:^string$:#009900::0:0:
+javascript:string:0:":":1::#009900::0:0:
+javascript:comment-C++-style:0://.*?$::2::#858282::1:2:
+javascript:comment-C-style:0:/\\*:\\*/:1::#858282::1:2:
+javascript:function:0:(function)\\b::2::#892E9A::2:2:
+javascript:operators:0:(\\+|\\-|\\*|\\<|\\!|\\=)::2::#F35E5E::2:0:
 
