--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -149,4 +149,36 @@ javascript:comment-C++-style:0://.*?$::2::#858282::1:2:
 javascript:comment-C-style:0:/\\*:\\*/:1::#858282::1:2:
 javascript:function:0:(function)\\b::2::#892E9A::2:2:
 javascript:operators:0:(\\+|\\-|\\*|\\<|\\!|\\=)::2::#F35E5E::2:0:
-
+sql:braces:1:[{()}]::2::::2:0:
+sql:table:1:([a-z0-9]+)\\.::2::::2:2:
+sql:row:1:\\.([a-z0-9]+)::2::::0:2:
+sql:reference:1:\\@([a-z0-9]+)::2::navy::2:2:
+sql:integer:1:\\b([0-9]+)\\b::2::#5272BB::2:2:
+sql:float:1:\\b([0-9]+)\\.([0-9]+)\\b::2::#5272BB::2:2:
+sql:string-double-quoted:1:\\":\\":1::darkred::0:2:
+sql:string-single-quoted:1:\\':\\':1::darkred::0:2:
+sql:reserved-UN_Z:1:\\b(UNDO|UNION|UNIQUE|UNKNOWN|USAGE|VIEW|WORK|WRITE|ZONE)\\b::2::::2:0:
+sql:reserved-SP_TR:1:\\b(SPECIFIC|SQL|SQLCODE|SQLERROR|SQLEXCEPTION|SQLSTATE|SQLWARNING|TABLE|TEMPORARY|TO|TRAILING|TRANSACTION|TRANSLATE|TRANSLATION)\\b::2::::2:0:
+sql:reserved-PR_SP:1:\\b(PRESERVE|PRIOR|READ|REFERENCES|RELATIVE|RESIGNAL|RESTRICT|RETURNS|ROLLBACK|ROWS|SCHEMA|SCROLL|SECTION|SIGNAL|SOME|SPACE)\\b::2::::2:0:
+sql:reserved-LO_PR:1:\\b(LOCAL|NAMES|NATIONAL|NULLIF|OCTET_LENGTH|ON|ONLY|OPEN|OPTION|OUT|OF|OUTPUT|OVERLAPS|PAD|PARTIAL|PATH|POSITION|PUBLIC|PRECISION|PREPARE)\\b::2::::2:0:
+sql:reserved-ID_LE:1:\\b(IDENTITY|IMMEDIATE|INDICATOR|INITIALLY|INOUT|INPUT|INSENSITIVE|INTERSECT|INTERVAL|ISOLATION|LANGUAGE|LEADING|LEAVE|LEVEL)\\b::2::::2:0:
+sql:reserved-DO_HA:1:\\b(DOMAIN|END|ESCAPE|EXCEPT|EXCEPTION|EXEC|EXECUTE|EXISTS|EXIT|EXTERNAL|EXTRACT|FETCH|FOREIGN|FOUND|FULL|GET|GLOBAL|GO|HANDLER)\\b::2::::2:0:
+sql:reserved-CU_DI:1:\\b(CURSOR|DEALLOCATE|DECLARE|DEFAULT|DEFERRABLE|DEFERRED|DESC|DESCRIBE|DESCRIPTOR|DETERMINISTIC|DIAGNOSTICS|DISCONNECT|DISTINCT)\\b::2::::2:0:
+sql:reserved-CO_CU:1:\\b(COMMIT|CONDITION|CONNECT|CONNECTION|CONSTRAINT|CONSTRAINTS|CONVERT|CORRESPONDING|CROSS|CURRENT|CURRENT_PATH)\\b::2::::2:0:
+sql:reserved-A_CO:1:\\b(ACTION|ADD|ALLOCATE|ASSERTION|BEGIN|BIT|BIT_LENGTH|BOTH|CASCADE|CASCADED|CAST|CATALOG|CHECK|CLOSE|COALESCE|COLLATE|COLLATION|COLUMN)\\b::2::::2:0:
+sql:math-operators:1:(\\+|\\/|\\*|\\-|\\=|\\<|\\>)::2::::2:0:
+sql:data-insertion:1:\\b(INSERT|INTO|SET|VALUE|VALUES|UPDATE|DELETE)\\b::2::#DF2231::2:0:
+sql:comparision-and-operators:1:\\b(ALL|AND|ANY|ARE|AS|BETWEEN|CONTAINS|HAVING|NOT|NO|OR|LIKE|MATCH|IS|IN|USING)\\b::2::#B3B34B::2:0:
+sql:selection-and-querying:1:\\b(SELECT|FROM|WHERE)\\b::2::blue::2:0:
+sql:db-structure:1:\\b(TABLE|COLUMN|KEY|INDEX|PRIMARY|FOREIGN)\\b::2::#5D5D5D::2:0:
+sql:function-method-related:1:\\b(CALL|PROCEDURE|PARAMETER|MODULE|FUNCTION|ROUTINE|RETURN)\\b::2::gray::2:0:
+sql:table-alter:1:\\b(ALTER|CREATE)\\b::2::#A32C99::2:0:
+sql:date-time:1:\\b(CURRENT_DATE|CURRENT_TIME|CURRENT_TIMESTAMP|CURRENT_USER|DATE|DAY|TIME|TIMESTAMP|TIMEZONE_HOUR|TIMEZONE_MINUTE|YEAR|MINUTE|MONTH|HOUR)\\b::2::pink::2:0:
+sql:common-functions:1:\\b(COUNT|ASC|AVG|FIRST|SUBSTRING|SUM|TRIM|UPPER|RIGHT|SIZE|LAST|LOWER|MIN|MAX|LEFT|AT)\\b::2::::2:0:
+sql:flow-related:1:\\b(CASE|CONTINUE|FOR|ELSEIF|ELSE|DO|GOTO|THEN|WHEN|WHENEVER|WHILE|WITH|UNTIL|NEXT|LOOP|REPEAT|IF)\\b::2::purple::2:0:
+sql:data-values:1:\\b(FALSE|TRUE|NULL)\\b::2::navy::2:0:
+sql:data-types:1:\\b(CHAR|CHAR_LENGTH|CHARACTER|CHARACTER_LENGTH|DEC|DECIMAL|DOUBLE|FLOAT|VARCHAR|VARYING|SMALLINT|REAL|NATURAL|NCHAR|NUMERIC|INT|INTEGER)\\b::2::darkgreen::2:0:
+sql:admin:1:\\b(AUTHORIZATION|DROP|GRANT|GROUP|SYSTEM_USER|USER|REVOKE|PRIVILEGES|SESSION|SESSION_USER)\\b::2::#992828::2:0:
+sql:user-and-host:1:\\b([a-z0-9]+)\\@([a-z0-9]+)\\b::2::::2:2:
+sql:grouping-joining-ordering:1:\\b(GROUP BY|INNER JOIN|OUTER JOIN|RIGHT JOIN|LEFT JOIN|ORDER BY)\\b::2::darkorange::2:0:
+sql:comment:1:--:\\n:1::#C0C0C0::0:0:
