--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -182,3 +182,28 @@ sql:admin:1:\\b(AUTHORIZATION|DROP|GRANT|GROUP|SYSTEM_USER|USER|REVOKE|PRIVILEGE
 sql:user-and-host:1:\\b([a-z0-9]+)\\@([a-z0-9]+)\\b::2::::2:2:
 sql:grouping-joining-ordering:1:\\b(GROUP BY|INNER JOIN|OUTER JOIN|RIGHT JOIN|LEFT JOIN|ORDER BY)\\b::2::darkorange::2:0:
 sql:comment:1:--:\\n:1::#C0C0C0::0:0:
+jsp:jsp-math-operators:1:(\\/|\\*|\\*|\\-|\\+|\\=)::2:^jsp$:#90840f::2:1:
+jsp:jsp-logical-operators:1:(\\&\\&|\\!\\=|\\!|\\=\\=|\\|\\|)::2:^jsp$:navy::2:1:
+jsp:jsp-new:0:\\b(new)\\b::2:^jsp$:#700b0b::2:0:
+jsp:jsp-common-used-classes:0:\\b(String|Object|Vector|BitSet|Stack|Hashtable|Collection|Map|List|HashMap|TreeMap)\\b::2:^jsp$:purple::2:1:
+jsp:jsp-data-types:1:\\b(boolean|byte|int|char|double|float|long|short)\\b::2:^jsp$:darkgreen::2:1:
+jsp:jsp-numbers:1:\\b([0-9]+)\\b::2:^jsp$:purple::0:1:
+jsp:jsp-comment-C++:0://.*?$::2:^jsp$:#7777AA::1:0:
+jsp:jsp-comment-C:0:/\\*:\\*/:1:^jsp$:#7777AA::1:0:
+jsp:jsp-string-single:0:':':1:^jsp$:#009900::1:1:
+jsp:jsp-string-double-escape:0:\\\\.::2:^jsp-string-double$:#009900::1:1:
+jsp:jsp-string-double:0:":":1:^jsp$:#009900::1:1:
+jsp:jsp-braces:0:[{()}]::2:^jsp$:#000000::2:1:
+jsp:jsp-methods:1:([a-z0-9]+)\\(::2:^jsp$:::2:1:
+jsp:jsp-data-values:1:\\b(true|false|null)\\b::2:^jsp$:#CC0000::2:1:
+jsp:jsp-objects:1:\\b([a-z0-9]+)\\.::2:^jsp$:#957e33::2:1:
+jsp:jsp-keywords:0:\\b(return|goto|if|else|case|default|switch|break|continue|while|do|for|global|class|try|catch|finally)\\b::2:^jsp$:#000000::2:1:
+jsp:jsp:1:<\\%:\\%>:1:^(top|html|html-attrib-sub2)$:#04013d::0:2:
+jsp:comment:0:<!--:-->:1::#AAAAAA::1:2:
+jsp:specialchar:1:&[^;]*;::2::#999999::2:0:
+jsp:html-attrib-sub2:1:2::3:^html-attrib$:#009900::0:0:
+jsp:html-attrib:1:([a-z]*=)[ \\n\\t]*("[^"]*")::2:^html$:::0:0:
+jsp:html-tag-special:1:^(/)?(img|a)$::2:^html-tag$:#BB0540::0:0:
+jsp:html-tag-table:1:^(/)?(table|td|tr|tbody)$::2:^html-tag$:#5005AA::0:0:
+jsp:html-tag:1:1::3:^html$:#550044::2:0:
+jsp:html:1:<((/)?[a-z0-9]+):>:1::#000077::0:0:
